Replace own services with Spring Data repositories